--- a/direct_prediction.ipynb
+++ b/direct_prediction.ipynb
@@ -207,7 +207,7 @@
     "# # Optionally, initialize and apply a scaler for y if necessary\n",
     "# scaler_y = MinMaxScaler(feature_range=(0, 1))\n",
     "# y_train_scaled = scaler_y.fit_transform(y_train.values.reshape(-1, 1))\n",
-    "# y_test_scaled = scaler_y.transform(y_test.values.reshape(-1, 1))\n",
+    "# y_test_scaled = scaler_y.transform(y_test.values.reshape(-1, 1)).\n",
     "\n",
     "# Now X_train_scaled, X_test_scaled, y_train_scaled, and y_test_scaled are ready for model training\n"
    ]
