--- a/main.ipynb
+++ b/main.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,9 +551,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Administrator\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import LSTM, Dense\n",
@@ -564,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +582,7 @@
        "[(578, 168, 27), (578, 24), (145, 168, 27), (145, 24)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,163 +593,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Users\\Administrator\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Administrator\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
       "Epoch 1/75\n",
-      "33/33 - 5s - loss: 0.0372 - val_loss: 0.0216 - 5s/epoch - 166ms/step\n",
+      "WARNING:tensorflow:From c:\\Users\\Administrator\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "33/33 - 7s - loss: 0.0448 - val_loss: 0.0213 - 7s/epoch - 223ms/step\n",
       "Epoch 2/75\n",
-      "33/33 - 3s - loss: 0.0175 - val_loss: 0.0159 - 3s/epoch - 104ms/step\n",
+      "33/33 - 2s - loss: 0.0179 - val_loss: 0.0157 - 2s/epoch - 54ms/step\n",
       "Epoch 3/75\n",
-      "33/33 - 4s - loss: 0.0156 - val_loss: 0.0155 - 4s/epoch - 109ms/step\n",
+      "33/33 - 1s - loss: 0.0159 - val_loss: 0.0152 - 1s/epoch - 38ms/step\n",
       "Epoch 4/75\n",
-      "33/33 - 3s - loss: 0.0149 - val_loss: 0.0152 - 3s/epoch - 100ms/step\n",
+      "33/33 - 1s - loss: 0.0149 - val_loss: 0.0147 - 1s/epoch - 40ms/step\n",
       "Epoch 5/75\n",
-      "33/33 - 3s - loss: 0.0143 - val_loss: 0.0148 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0142 - val_loss: 0.0144 - 1s/epoch - 37ms/step\n",
       "Epoch 6/75\n",
-      "33/33 - 3s - loss: 0.0139 - val_loss: 0.0147 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0139 - val_loss: 0.0143 - 1s/epoch - 37ms/step\n",
       "Epoch 7/75\n",
-      "33/33 - 3s - loss: 0.0136 - val_loss: 0.0146 - 3s/epoch - 95ms/step\n",
+      "33/33 - 1s - loss: 0.0135 - val_loss: 0.0141 - 1s/epoch - 38ms/step\n",
       "Epoch 8/75\n",
-      "33/33 - 3s - loss: 0.0133 - val_loss: 0.0145 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0133 - val_loss: 0.0140 - 1s/epoch - 39ms/step\n",
       "Epoch 9/75\n",
-      "33/33 - 3s - loss: 0.0130 - val_loss: 0.0144 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0130 - val_loss: 0.0139 - 1s/epoch - 38ms/step\n",
       "Epoch 10/75\n",
-      "33/33 - 3s - loss: 0.0128 - val_loss: 0.0143 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0128 - val_loss: 0.0139 - 1s/epoch - 39ms/step\n",
       "Epoch 11/75\n",
-      "33/33 - 4s - loss: 0.0126 - val_loss: 0.0143 - 4s/epoch - 114ms/step\n",
+      "33/33 - 1s - loss: 0.0126 - val_loss: 0.0138 - 1s/epoch - 39ms/step\n",
       "Epoch 12/75\n",
-      "33/33 - 3s - loss: 0.0124 - val_loss: 0.0144 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0124 - val_loss: 0.0138 - 1s/epoch - 38ms/step\n",
       "Epoch 13/75\n",
-      "33/33 - 3s - loss: 0.0122 - val_loss: 0.0144 - 3s/epoch - 95ms/step\n",
+      "33/33 - 1s - loss: 0.0123 - val_loss: 0.0137 - 1s/epoch - 38ms/step\n",
       "Epoch 14/75\n",
-      "33/33 - 3s - loss: 0.0120 - val_loss: 0.0145 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0121 - val_loss: 0.0137 - 1s/epoch - 39ms/step\n",
       "Epoch 15/75\n",
-      "33/33 - 3s - loss: 0.0118 - val_loss: 0.0145 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0120 - val_loss: 0.0137 - 1s/epoch - 38ms/step\n",
       "Epoch 16/75\n",
-      "33/33 - 3s - loss: 0.0117 - val_loss: 0.0145 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0119 - val_loss: 0.0137 - 1s/epoch - 38ms/step\n",
       "Epoch 17/75\n",
-      "33/33 - 3s - loss: 0.0115 - val_loss: 0.0146 - 3s/epoch - 95ms/step\n",
+      "33/33 - 1s - loss: 0.0118 - val_loss: 0.0137 - 1s/epoch - 38ms/step\n",
       "Epoch 18/75\n",
-      "33/33 - 3s - loss: 0.0113 - val_loss: 0.0146 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0117 - val_loss: 0.0137 - 1s/epoch - 37ms/step\n",
       "Epoch 19/75\n",
-      "33/33 - 3s - loss: 0.0111 - val_loss: 0.0145 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0116 - val_loss: 0.0138 - 1s/epoch - 39ms/step\n",
       "Epoch 20/75\n",
-      "33/33 - 3s - loss: 0.0109 - val_loss: 0.0145 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0115 - val_loss: 0.0140 - 1s/epoch - 39ms/step\n",
       "Epoch 21/75\n",
-      "33/33 - 3s - loss: 0.0108 - val_loss: 0.0146 - 3s/epoch - 100ms/step\n",
+      "33/33 - 1s - loss: 0.0114 - val_loss: 0.0138 - 1s/epoch - 37ms/step\n",
       "Epoch 22/75\n",
-      "33/33 - 3s - loss: 0.0108 - val_loss: 0.0139 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0111 - val_loss: 0.0138 - 1s/epoch - 37ms/step\n",
       "Epoch 23/75\n",
-      "33/33 - 3s - loss: 0.0106 - val_loss: 0.0141 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0110 - val_loss: 0.0141 - 1s/epoch - 37ms/step\n",
       "Epoch 24/75\n",
-      "33/33 - 3s - loss: 0.0104 - val_loss: 0.0136 - 3s/epoch - 96ms/step\n",
+      "33/33 - 1s - loss: 0.0109 - val_loss: 0.0143 - 1s/epoch - 36ms/step\n",
       "Epoch 25/75\n",
-      "33/33 - 3s - loss: 0.0104 - val_loss: 0.0146 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0107 - val_loss: 0.0140 - 1s/epoch - 37ms/step\n",
       "Epoch 26/75\n",
-      "33/33 - 3s - loss: 0.0101 - val_loss: 0.0150 - 3s/epoch - 100ms/step\n",
+      "33/33 - 1s - loss: 0.0104 - val_loss: 0.0137 - 1s/epoch - 37ms/step\n",
       "Epoch 27/75\n",
-      "33/33 - 3s - loss: 0.0098 - val_loss: 0.0155 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0103 - val_loss: 0.0137 - 1s/epoch - 37ms/step\n",
       "Epoch 28/75\n",
-      "33/33 - 3s - loss: 0.0096 - val_loss: 0.0160 - 3s/epoch - 96ms/step\n",
+      "33/33 - 1s - loss: 0.0103 - val_loss: 0.0137 - 1s/epoch - 38ms/step\n",
       "Epoch 29/75\n",
-      "33/33 - 4s - loss: 0.0096 - val_loss: 0.0164 - 4s/epoch - 106ms/step\n",
+      "33/33 - 1s - loss: 0.0102 - val_loss: 0.0138 - 1s/epoch - 38ms/step\n",
       "Epoch 30/75\n",
-      "33/33 - 3s - loss: 0.0096 - val_loss: 0.0155 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0100 - val_loss: 0.0134 - 1s/epoch - 37ms/step\n",
       "Epoch 31/75\n",
-      "33/33 - 3s - loss: 0.0095 - val_loss: 0.0166 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0098 - val_loss: 0.0134 - 1s/epoch - 36ms/step\n",
       "Epoch 32/75\n",
-      "33/33 - 3s - loss: 0.0094 - val_loss: 0.0168 - 3s/epoch - 102ms/step\n",
+      "33/33 - 1s - loss: 0.0099 - val_loss: 0.0139 - 1s/epoch - 37ms/step\n",
       "Epoch 33/75\n",
-      "33/33 - 3s - loss: 0.0098 - val_loss: 0.0174 - 3s/epoch - 100ms/step\n",
+      "33/33 - 1s - loss: 0.0105 - val_loss: 0.0137 - 1s/epoch - 39ms/step\n",
       "Epoch 34/75\n",
-      "33/33 - 3s - loss: 0.0109 - val_loss: 0.0139 - 3s/epoch - 102ms/step\n",
+      "33/33 - 1s - loss: 0.0097 - val_loss: 0.0138 - 1s/epoch - 37ms/step\n",
       "Epoch 35/75\n",
-      "33/33 - 3s - loss: 0.0099 - val_loss: 0.0144 - 3s/epoch - 102ms/step\n",
+      "33/33 - 1s - loss: 0.0099 - val_loss: 0.0139 - 1s/epoch - 36ms/step\n",
       "Epoch 36/75\n",
-      "33/33 - 3s - loss: 0.0093 - val_loss: 0.0153 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0100 - val_loss: 0.0141 - 1s/epoch - 38ms/step\n",
       "Epoch 37/75\n",
-      "33/33 - 3s - loss: 0.0090 - val_loss: 0.0152 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0098 - val_loss: 0.0137 - 1s/epoch - 38ms/step\n",
       "Epoch 38/75\n",
-      "33/33 - 4s - loss: 0.0087 - val_loss: 0.0154 - 4s/epoch - 107ms/step\n",
+      "33/33 - 1s - loss: 0.0090 - val_loss: 0.0136 - 1s/epoch - 39ms/step\n",
       "Epoch 39/75\n",
-      "33/33 - 3s - loss: 0.0088 - val_loss: 0.0147 - 3s/epoch - 102ms/step\n",
+      "33/33 - 1s - loss: 0.0089 - val_loss: 0.0139 - 1s/epoch - 37ms/step\n",
       "Epoch 40/75\n",
-      "33/33 - 3s - loss: 0.0089 - val_loss: 0.0153 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0086 - val_loss: 0.0140 - 1s/epoch - 37ms/step\n",
       "Epoch 41/75\n",
-      "33/33 - 3s - loss: 0.0088 - val_loss: 0.0154 - 3s/epoch - 102ms/step\n",
+      "33/33 - 1s - loss: 0.0085 - val_loss: 0.0142 - 1s/epoch - 37ms/step\n",
       "Epoch 42/75\n",
-      "33/33 - 3s - loss: 0.0086 - val_loss: 0.0155 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0083 - val_loss: 0.0152 - 1s/epoch - 39ms/step\n",
       "Epoch 43/75\n",
-      "33/33 - 3s - loss: 0.0085 - val_loss: 0.0145 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0084 - val_loss: 0.0144 - 1s/epoch - 38ms/step\n",
       "Epoch 44/75\n",
-      "33/33 - 3s - loss: 0.0084 - val_loss: 0.0157 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0082 - val_loss: 0.0151 - 1s/epoch - 37ms/step\n",
       "Epoch 45/75\n",
-      "33/33 - 3s - loss: 0.0085 - val_loss: 0.0155 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0086 - val_loss: 0.0146 - 1s/epoch - 39ms/step\n",
       "Epoch 46/75\n",
-      "33/33 - 3s - loss: 0.0088 - val_loss: 0.0158 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0090 - val_loss: 0.0133 - 1s/epoch - 37ms/step\n",
       "Epoch 47/75\n",
-      "33/33 - 3s - loss: 0.0087 - val_loss: 0.0159 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0083 - val_loss: 0.0146 - 1s/epoch - 36ms/step\n",
       "Epoch 48/75\n",
-      "33/33 - 3s - loss: 0.0085 - val_loss: 0.0159 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0081 - val_loss: 0.0149 - 1s/epoch - 36ms/step\n",
       "Epoch 49/75\n",
-      "33/33 - 3s - loss: 0.0083 - val_loss: 0.0154 - 3s/epoch - 97ms/step\n",
+      "33/33 - 1s - loss: 0.0082 - val_loss: 0.0149 - 1s/epoch - 38ms/step\n",
       "Epoch 50/75\n",
-      "33/33 - 3s - loss: 0.0080 - val_loss: 0.0153 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0079 - val_loss: 0.0143 - 1s/epoch - 37ms/step\n",
       "Epoch 51/75\n",
-      "33/33 - 3s - loss: 0.0079 - val_loss: 0.0159 - 3s/epoch - 100ms/step\n",
+      "33/33 - 1s - loss: 0.0079 - val_loss: 0.0152 - 1s/epoch - 36ms/step\n",
       "Epoch 52/75\n",
-      "33/33 - 3s - loss: 0.0079 - val_loss: 0.0158 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0075 - val_loss: 0.0152 - 1s/epoch - 40ms/step\n",
       "Epoch 53/75\n",
-      "33/33 - 3s - loss: 0.0080 - val_loss: 0.0153 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0076 - val_loss: 0.0158 - 1s/epoch - 37ms/step\n",
       "Epoch 54/75\n",
-      "33/33 - 3s - loss: 0.0084 - val_loss: 0.0146 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0102 - val_loss: 0.0170 - 1s/epoch - 42ms/step\n",
       "Epoch 55/75\n",
-      "33/33 - 3s - loss: 0.0082 - val_loss: 0.0150 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0089 - val_loss: 0.0157 - 1s/epoch - 42ms/step\n",
       "Epoch 56/75\n",
-      "33/33 - 3s - loss: 0.0082 - val_loss: 0.0160 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0083 - val_loss: 0.0164 - 1s/epoch - 45ms/step\n",
       "Epoch 57/75\n",
-      "33/33 - 3s - loss: 0.0081 - val_loss: 0.0156 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0084 - val_loss: 0.0164 - 1s/epoch - 40ms/step\n",
       "Epoch 58/75\n",
-      "33/33 - 3s - loss: 0.0080 - val_loss: 0.0165 - 3s/epoch - 104ms/step\n",
+      "33/33 - 1s - loss: 0.0077 - val_loss: 0.0153 - 1s/epoch - 41ms/step\n",
       "Epoch 59/75\n",
-      "33/33 - 3s - loss: 0.0089 - val_loss: 0.0159 - 3s/epoch - 100ms/step\n",
+      "33/33 - 1s - loss: 0.0077 - val_loss: 0.0155 - 1s/epoch - 43ms/step\n",
       "Epoch 60/75\n",
-      "33/33 - 3s - loss: 0.0085 - val_loss: 0.0159 - 3s/epoch - 98ms/step\n",
+      "33/33 - 1s - loss: 0.0075 - val_loss: 0.0150 - 1s/epoch - 44ms/step\n",
       "Epoch 61/75\n",
-      "33/33 - 3s - loss: 0.0079 - val_loss: 0.0163 - 3s/epoch - 99ms/step\n",
+      "33/33 - 2s - loss: 0.0074 - val_loss: 0.0154 - 2s/epoch - 46ms/step\n",
       "Epoch 62/75\n",
-      "33/33 - 3s - loss: 0.0075 - val_loss: 0.0157 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0073 - val_loss: 0.0166 - 1s/epoch - 44ms/step\n",
       "Epoch 63/75\n",
-      "33/33 - 3s - loss: 0.0078 - val_loss: 0.0158 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0071 - val_loss: 0.0165 - 1s/epoch - 44ms/step\n",
       "Epoch 64/75\n",
-      "33/33 - 3s - loss: 0.0074 - val_loss: 0.0172 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0068 - val_loss: 0.0161 - 1s/epoch - 43ms/step\n",
       "Epoch 65/75\n",
-      "33/33 - 3s - loss: 0.0070 - val_loss: 0.0166 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0067 - val_loss: 0.0169 - 1s/epoch - 42ms/step\n",
       "Epoch 66/75\n",
-      "33/33 - 3s - loss: 0.0068 - val_loss: 0.0168 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0067 - val_loss: 0.0156 - 1s/epoch - 41ms/step\n",
       "Epoch 67/75\n",
-      "33/33 - 3s - loss: 0.0066 - val_loss: 0.0180 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0070 - val_loss: 0.0159 - 1s/epoch - 43ms/step\n",
       "Epoch 68/75\n",
-      "33/33 - 4s - loss: 0.0066 - val_loss: 0.0177 - 4s/epoch - 107ms/step\n",
+      "33/33 - 1s - loss: 0.0068 - val_loss: 0.0172 - 1s/epoch - 43ms/step\n",
       "Epoch 69/75\n",
-      "33/33 - 4s - loss: 0.0065 - val_loss: 0.0181 - 4s/epoch - 109ms/step\n",
+      "33/33 - 1s - loss: 0.0065 - val_loss: 0.0156 - 1s/epoch - 45ms/step\n",
       "Epoch 70/75\n",
-      "33/33 - 3s - loss: 0.0064 - val_loss: 0.0168 - 3s/epoch - 105ms/step\n",
+      "33/33 - 1s - loss: 0.0064 - val_loss: 0.0170 - 1s/epoch - 41ms/step\n",
       "Epoch 71/75\n",
-      "33/33 - 3s - loss: 0.0064 - val_loss: 0.0167 - 3s/epoch - 106ms/step\n",
+      "33/33 - 1s - loss: 0.0062 - val_loss: 0.0160 - 1s/epoch - 43ms/step\n",
       "Epoch 72/75\n",
-      "33/33 - 3s - loss: 0.0068 - val_loss: 0.0169 - 3s/epoch - 101ms/step\n",
+      "33/33 - 1s - loss: 0.0063 - val_loss: 0.0156 - 1s/epoch - 41ms/step\n",
       "Epoch 73/75\n",
-      "33/33 - 3s - loss: 0.0066 - val_loss: 0.0169 - 3s/epoch - 99ms/step\n",
+      "33/33 - 1s - loss: 0.0061 - val_loss: 0.0161 - 1s/epoch - 40ms/step\n",
       "Epoch 74/75\n",
-      "33/33 - 3s - loss: 0.0063 - val_loss: 0.0158 - 3s/epoch - 103ms/step\n",
+      "33/33 - 1s - loss: 0.0067 - val_loss: 0.0162 - 1s/epoch - 40ms/step\n",
       "Epoch 75/75\n",
-      "33/33 - 3s - loss: 0.0061 - val_loss: 0.0164 - 3s/epoch - 101ms/step\n"
+      "33/33 - 1s - loss: 0.0067 - val_loss: 0.0173 - 1s/epoch - 40ms/step\n"
      ]
     }
    ],
@@ -1933,7 +1948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
